<resources>
    <string name="app_name">Week02Day01Persons</string>
    <string name="check_picture">Check Picture</string>
    <string name="check_persons">Check Persons</string>
    <string name="enter_the_first_name">Enter the First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="restart">Restart</string>
    <string name="submit">Submit</string>
    <string name="age">Age</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="sex">Sex</string>
    <string name="person_list">Persons List</string>
    <string name="create_person">Create Person</string>
    <string name="take_new_picture">Take new Picture</string>
    <string name="picture">Picture</string>
</resources>
