<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/btnMusic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/stop"
        android:tint="@color/colorIcons"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="music"
        app:layout_constraintEnd_toStartOf="@id/tvNumberPersons"
        app:layout_constraintStart_toEndOf="@id/btnCamera"
        android:layout_margin="15dp"
        />

    <ImageView
        android:id="@+id/btnList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/list"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="15dp"
        android:onClick="checkPersons"
        android:tint="@color/colorIcons"
        />

    <TextView
        android:id="@+id/tvNumberPersons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:text="5"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@id/btnList"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/btnCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@id/tvNumberPersons"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:tint="@color/colorIcons"
        android:onClick="checkPictures"
        app:srcCompat="@drawable/camera" />

    <TextView
        android:id="@+id/tvCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCamera"
        android:text="@string/check_picture"
        />

    <TextView
        android:id="@+id/tvPersons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnList"
        android:text="@string/check_persons"
        />

    <View
        android:id="@+id/line01"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@id/tvCamera"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        />


    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_the_first_name"
        android:layout_margin="5dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/line01"/>

    <EditText
        android:id="@+id/etLasttName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_last_name"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@+id/etFirstName"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sex"
        android:id="@+id/tvSex"
        android:textSize="17sp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etLasttName"
        />
    <RadioGroup
        android:id="@+id/rgSex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/tvSex"
        >

        <RadioButton
            android:id="@+id/rbMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/rbFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"/>

    </RadioGroup>

    <EditText
        android:id="@+id/etAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="3"
        android:layout_margin="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rgSex"
        android:hint="@string/age"
        />

    <Button
        android:id="@+id/btnRestart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:onClick="cancel"
        android:text="@string/restart"
        android:textColor="@color/colorWrong"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etAge"
        app:layout_constraintVertical_bias="0.073" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:textColor="@color/colorRight"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="submit"
        app:layout_constraintTop_toBottomOf="@id/etAge"
        app:layout_constraintVertical_bias="0.073"
        />




</android.support.constraint.ConstraintLayout>